<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper2"
    tools:context=".info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="68dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/info"
                android:textAlignment="viewStart"
                android:textColor="@color/DarkMagenta"
                android:textColorHighlight="@color/Rose"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bttnEmial"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/DarkSlateGray"
            android:fontFamily="sans-serif-light"
            android:text="@string/infoEmail"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/bttnPhone"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/DarkSlateGray"
            android:fontFamily="sans-serif-light"
            android:text="@string/infoPhone"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="105dp" />

        <Button
            android:id="@+id/backBttnInfo"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/DarkSlateGray"
            android:fontFamily="sans-serif-light"
            android:text="@string/HomeButton"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>