<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Capri">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:background="@drawable/cprilogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/bttnCpriFin"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="serif"
            android:text="@string/Financials" />

        <Button
            android:id="@+id/bttnCpriStock"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="serif"
            android:text="@string/Stock" />

        <Button
            android:id="@+id/backBttnCPRI"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="serif"
            android:text="@string/HomeButton" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>