<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChristianDior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            app:srcCompat="@drawable/christian_dior_logo" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/bttnCDFin"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="serif"
            android:text="@string/Financials" />

        <Button
            android:id="@+id/bttnCDStock"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="serif"
            android:text="@string/Stock" />

        <Button
            android:id="@+id/backBttnCD"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:fontFamily="serif"
            android:text="@string/HomeButton" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>